[package]
name = "reter_linhas_com_info_das_chaves"
description = "Analisar chaves de 44 dígitos de arquivos Sped EFD e de Documentos Fiscais Eletrônicos"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = { version = "1.8", features = ["rayon"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
execution-time = "0.3"
rand = "0.9"
rayon = "1.11"
regex = "1.12"
thiserror = "2.0"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
debug = true            # Debug info at all.
strip = "symbols"       # Strip symbols from a binary.
opt-level = 3           # All optimizations.
overflow-checks = true  # Panic will occur on overflow.
lto = true              # Enable link time optimization.
codegen-units = 1       # Use a single codegen for size optimization.
panic = "abort"         # Remove traceback information.
incremental = true      # Save information to disk, improving re-compile times.

[profile.dev]
opt-level = 1           # Use slightly better optimizations.
